; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-hncp.c_print_dns_label.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-hncp.c_print_dns_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"[|DNS]\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64*, i64, i32)* @print_dns_label to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @print_dns_label(i32* %0, i64* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i64* %1, i64** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 0, i64* %10, align 8
  br label %12

12:                                               ; preds = %65, %4
  %13 = load i64, i64* %10, align 8
  %14 = load i64, i64* %8, align 8
  %15 = icmp slt i64 %13, %14
  br i1 %15, label %16, label %69

16:                                               ; preds = %12
  %17 = load i64*, i64** %7, align 8
  %18 = load i64, i64* %10, align 8
  %19 = add nsw i64 %18, 1
  store i64 %19, i64* %10, align 8
  %20 = getelementptr inbounds i64, i64* %17, i64 %18
  %21 = load i64, i64* %20, align 8
  store i64 %21, i64* %11, align 8
  %22 = load i64, i64* %11, align 8
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %16
  %25 = load i64, i64* %10, align 8
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* %5, align 4
  br label %76

27:                                               ; preds = %16
  %28 = load i64, i64* %10, align 8
  %29 = icmp sgt i64 %28, 1
  br i1 %29, label %30, label %36

30:                                               ; preds = %27
  %31 = load i32, i32* %9, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %36

33:                                               ; preds = %30
  %34 = load i32*, i32** %6, align 8
  %35 = call i32 @safeputchar(i32* %34, i8 signext 46)
  br label %36

36:                                               ; preds = %33, %30, %27
  %37 = load i64, i64* %10, align 8
  %38 = load i64, i64* %11, align 8
  %39 = add nsw i64 %37, %38
  %40 = load i64, i64* %8, align 8
  %41 = icmp sgt i64 %39, %40
  br i1 %41, label %42, label %55

42:                                               ; preds = %36
  %43 = load i32, i32* %9, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %54

45:                                               ; preds = %42
  %46 = load i32*, i32** %6, align 8
  %47 = load i64*, i64** %7, align 8
  %48 = load i64, i64* %10, align 8
  %49 = getelementptr inbounds i64, i64* %47, i64 %48
  %50 = load i64, i64* %8, align 8
  %51 = load i64, i64* %10, align 8
  %52 = sub nsw i64 %50, %51
  %53 = call i32 @safeputs(i32* %46, i64* %49, i64 %52)
  br label %54

54:                                               ; preds = %45, %42
  br label %69

55:                                               ; preds = %36
  %56 = load i32, i32* %9, align 4
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %58, label %65

58:                                               ; preds = %55
  %59 = load i32*, i32** %6, align 8
  %60 = load i64*, i64** %7, align 8
  %61 = load i64, i64* %10, align 8
  %62 = getelementptr inbounds i64, i64* %60, i64 %61
  %63 = load i64, i64* %11, align 8
  %64 = call i32 @safeputs(i32* %59, i64* %62, i64 %63)
  br label %65

65:                                               ; preds = %58, %55
  %66 = load i64, i64* %11, align 8
  %67 = load i64, i64* %10, align 8
  %68 = add nsw i64 %67, %66
  store i64 %68, i64* %10, align 8
  br label %12

69:                                               ; preds = %54, %12
  %70 = load i32, i32* %9, align 4
  %71 = icmp ne i32 %70, 0
  br i1 %71, label %72, label %75

72:                                               ; preds = %69
  %73 = load i32*, i32** %6, align 8
  %74 = call i32 @ND_PRINT(i32* bitcast ([7 x i8]* @.str to i32*))
  br label %75

75:                                               ; preds = %72, %69
  store i32 -1, i32* %5, align 4
  br label %76

76:                                               ; preds = %75, %24
  %77 = load i32, i32* %5, align 4
  ret i32 %77
}

declare dso_local i32 @safeputchar(i32*, i8 signext) #1

declare dso_local i32 @safeputs(i32*, i64*, i64) #1

declare dso_local i32 @ND_PRINT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
